[package]
name = "newton"
version = "0.0.1"
authors = ["Tracy Ma <1991md@gmail.com>"]

[lib]
name = "newton"
path = "src/lib.rs"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.serde]
git = "https://github.com/serde-rs/serde"

[[example]]
name = "cocos"
path = "example/cocos/main.rs"
