[package]
name = "newton"
version = "0.0.1"
authors = ["Tracy Ma <1991md@gmail.com>"]

[lib]
name = "newton"
path = "src/lib.rs"

[dependencies.serde]
git = "https://github.com/serde-rs/serde"

[dependencies.serde_macros]
git = "https://github.com/serde-rs/serde"

[dependencies.glium]
git = "https://github.com/tomaka/glium"

[[example]]
name = "cocos"
path = "example/cocos.rs"
